<?xml version="1.0"?>
<package format="2">
  <name>lux_description</name>
  <version>0.0.1</version>
  <description>The lux_description package</description>
  <maintainer email="menggu1234@naver.com">mjlee111</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
</package>